--- a/mark-magic.config.yaml
+++ b/mark-magic.config.yaml
@@ -39,9 +39,9 @@ tasks:
     output:
       name: '@mark-magic/plugin-epub'
       config:
-        path: ./dist/epub/Puella Magi Adfligo Systema.epub
-        id: pmas
+        path: ./dist/epub/Clarisse Quest.epub
+        id: clarisse-quest
         title: 飞向星空 机械幽魂
-        creator: Firnagzen
-        publisher: rxliuli
+        creator: tomoyo
+        publisher: mark-magic
         language: zh-CN
